# tms-experiment-dashboard

./: .gitignore  README.md  button_test.py  main.py  main_loop.py  main_nicegui.py  nice_details.csv  pyproject.toml  setup.py  test_time.py  web_UI_streamlit_trials.py
docs/: bittium_neurOne.md
docs/images/: desktop.ini
nicegui/: main_nicegui.py
scripts/: relay_server.py
src/tms_dashboard/: __init__.py  config.py  constants.py
src/tms_dashboard/core/: __init__.py  dashboard_state.py  data_logger.py  message_emit.py  message_handler.py  robot_config_state.py  socket_client.py
src/tms_dashboard/core/components/: emg_connection.py
src/tms_dashboard/core/modules/: emg_connection.py  socket_client.py
src/tms_dashboard/nicegui_app/: __init__.py  client_manager.py  main.py  run.py  styles.py  ui_state.py  update_dashboard.py
src/tms_dashboard/nicegui_app/components/: __init__.py  checklist_tab.py  dashboard_tabs.py  experiment_form.py  header.py  navigation_3d.py
src/tms_dashboard/nicegui_app/components/widgets/: __init__.py  navigation_controls.py  status_widgets.py  time_series_panel.py
src/tms_dashboard/nicegui_app/ui/: __init__.py  checklist_tab.py  dashboard_tabs.py  experiment_form.py  header.py
src/tms_dashboard/nicegui_app/ui/widgets/: __init__.py  navigation_3d.py  (+5 more)
src/tms_dashboard/static/objects/: human_head.stl
src/tms_dashboard/streamlit_app/: run.py
src/tms_dashboard/utils/: __init__.py  constants.py  coordinate_transform.py  signal_processing.py
streamlit/: web_UI_streamlit.py  web_UI_streamlit_trials.py
taipy/: chart.py  main.py
